--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "express-rest-api-template",
+  "name": "bank-customer-statement-processor",
   "version": "0.0.0",
   "private": true,
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/arrusiak/bank-customer-statement-processor.git"
+  },
   "scripts": {
-    "start": "NODE_ENV=production node ./src/bin/www",
-    "dev": "NODE_ENV=development nodemon ./src/bin/www",
+    "start": "node ./index.js",
+    "dev": "nodemon ./index.js --exec",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "lint": "eslint .",
@@ -18,7 +23,9 @@
     "http-errors": "^1.8.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "winston": "^3.3.3",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
