--- a/package.json
+++ b/package.json
@@ -9,25 +9,29 @@
   },
   "scripts": {
     "start": "node ./index.js",
-    "dev": "nodemon ./index.js --exec",
+    "dev": "nodemon --exec babel-node index.js",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
+    "@babel/node": "^7.22.19",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fast-csv": "^4.3.6",
     "helmet": "^3.23.3",
     "http-errors": "^1.8.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "xml2js": "^0.6.2",
     "winston": "^3.3.3",
-    "dotenv": "^8.2.0"
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.5",
+    "@babel/preset-env": "^7.23.5",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-config-prettier": "^6.15.0",
