add report validations functionality

--- a/package.json
+++ b/package.json
@@ -8,22 +8,19 @@
     "url": "git://github.com/arrusiak/bank-customer-statement-processor.git"
   },
   "scripts": {
-    "start": "node ./index.js",
+    "build": "npm run clean && npm run build-server",
+    "build-server": "babel -d dist ./ --ignore 'node_modules/'",
     "dev": "nodemon --exec babel-node index.js",
-    "test": "jest",
-    "test:watch": "jest --watchAll",
-    "lint": "eslint .",
+    "start": "node dist/index.js",
+    "clean": "rm -rf dist && mkdir dist",
+    "lint": "eslint src",
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
     "@babel/node": "^7.22.19",
-    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fast-csv": "^4.3.6",
-    "helmet": "^3.23.3",
-    "http-errors": "^1.8.0",
-    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "winston": "^3.3.3",
     "xml2js": "^0.6.2"
@@ -37,12 +34,7 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
-    "jest": "^24.9.0",
-    "nodemon": "^2.0.12",
-    "supertest": "^3.4.2"
-  },
-  "jest": {
-    "testEnvironment": "node"
+    "nodemon": "^2.0.12"
   },
   "nodemonConfig": {
     "ignore": [
