--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
     "extends": "airbnb-base",
     "root": true,
     "rules": {
+        "import/prefer-default-export": 0,
         "object-curly-spacing": [
             "error",
             "never"
